Updating the NAICS code selector header label text in the search_base template.

--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -7,7 +7,7 @@
         <div id="search-main">
             <div id="search-focus">
                 <div id="naics_select">
-                    <span class="select_text">Select an NAICS Code / Description</span>
+                    <span class="select_text">Select NAICS Code / Description</span>
                     <form id="naics-search" class="pure-form">
                         <select id="naics-code" class="search_text_style" title="Select a NAICS code or description"></select>
                     </form>
