Adding a disclaimer bullet point for the PSS schedule information in the index template.

--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -48,6 +48,7 @@
                         <li>Allows use of streamlined procurement procedures in FAR Subpart 8.4 Federal Supply Schedules</li>
                         <li>Provides direct access to simple or complex fixed-price or labor-hour professional services</li>
                         <li>Offers federal agencies access to more than 3,300 experienced contractors</li>
+                        <li>Please note, PSS small business designation may be incorrect for up to 20% of listings due to lack of updates by vendors</li>
                         <li><a class="learn_more" href="https://www.gsa.gov/acquisition/products-services/professional-services/professional-services-schedule-pss">Learn more about PSS</a></li>
                     </ul>
                 </div>
