Updating contract count hover description on the pool page in the pool template.

--- a/app/discovery/templates/pool.html
+++ b/app/discovery/templates/pool.html
@@ -37,7 +37,7 @@
                         Location
                     </th>
                     <th scope="col" class="h_naics_results arrow-down sortable" title="Sorted descending">
-                        <span title="Contract count for work performed under the selected NAICs codes over the last 10 years">Contracts</span>
+                        <span title="Contract count for 5 years of work related to search">Contracts</span>
                     </th>
                     <th scope="col" class="h_vendor_pools">
                         Vehicles
