--- a/app/discovery/templates/base.html
+++ b/app/discovery/templates/base.html
@@ -28,8 +28,8 @@
         <script src="{% static 'discovery_site/js/contrib/mediator.min.js' %}"></script>
 
         <script src="{% static 'discovery_site/js/utility.js' %}"></script>
+        <script src="{% static 'discovery_site/js/format.js' %}"></script>
         <script src="{% static 'discovery_site/js/data-manager.js' %}"></script>
-        <script src="{% static 'discovery_site/js/requests-manager.js' %}"></script>
         <script src="{% static 'discovery_site/js/layout-manager.js' %}"></script>
         <script src="{% static 'discovery_site/js/index.js' %}"></script>
         <script>
@@ -144,6 +144,8 @@
                     <a href="http://www.gsa.gov"><div class="logo2"><img src="{% static 'discovery_site/images/gsa_logo.jpg' %} " alt="GSA logo"></div></a>
                 </div><!--end logo_container<!-->
             </div><!--end footer<!-->
+
+            <span id="site_status">init</span>
         </div><!--end footer_container<!-->
 
 
