Adding a BMO list item on the home page index template.

--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -28,6 +28,7 @@
                         <li>Provides a regionally focused pool of highly qualified large and small contractors</li>
                         <li>Allows flexibility for contract types, including fixed price, labor hour, time and materials, and hybrids</li>
                         <li>Leverages spend in acquiring services in an effective, economical, and expedient manner resulting in both significant cost and time savings</li>
+                        <li>Following FAR Subpart 16.505 Ordering Procedures, all BMO vendors that can meet the exact specifications of your requirement should be notified (given Fair Opportunity to compete)</li>
                         <li><a class="bmo_descriptions" href="{% static 'discovery_site/files/BMO_Phase_II_Service_Category_Descriptions.pdf' %}" target="_blank" rel="noopener noreferrer">BMO Phase II Service Category Descriptions</a></li>
                         <li><a class="learn_more" href="https://www.gsa.gov/acquisition/purchasing-programs/federal-strategic-sourcing-initiative/building-maintenance-and-operations)">Learn more about BMO</a></li>
                     </ul>
