Adding how to use discovery section and moving about pools section on homepage in index template.

--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -9,6 +9,9 @@
             <h3>Discovery</h3>
             <p class="about_discovery_text">Discovery is a market research tool for GSA Contract Vehicles. Currently, it features GSA IDIQ vehicles, with more contracts coming in the future. Use Discovery to search vendor history for the awarded contractors and NAICs of the various IDIQs. Some contracts are separated into Unrestricted and Small Business (SB) based on their contract structure. For all other contracts, you can apply small business filters to narrow your results based on any set aside needs you have.</p>
 
+            <h3>How to use Discovery</h3>
+            <p class="about_discovery_text">Discovery lets you pick and choose different criteria in order to narrow down contracts to find one that suits your needs.  Select any of the listed filters to view lists of vendors available based on the selected criteria.  The other filters will update as you select certain fields.  Select the “All” options to clear them. Once you’ve selected one or more options from the dropdowns, you can then click through to the vendor’s pages to see contract history and registration data for each vendor.</p>
+
             <h3>Contract Vehicles</h3>
             <div id="discovery_vehicles" class="about_discovery_text collapse-container">
                 <h1 class="vehicle"><span class="arrow-d"></span>One Acquisition Solution for Integrated Services (<b>OASIS</b>)</h1>
@@ -54,12 +57,6 @@
                     </ul>
                 </div>
             </div>
-
-            <h3>What are Pools?</h3>
-            <ul class="about_discovery_text">
-                <li>Discovery’s IDIQs are divided into functional categories that are referred to as pools</li>
-                <li>If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct pool</li>
-            </ul>
         </div><!-- end about_discovery -->
 
         <div id="data_sources">
@@ -80,6 +77,12 @@
                 <span id="data_source_last_updated">last updated</span>
                 <span id="data_source_description_fpds"  class="data_source_description">Discovery loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
             </div><!-- end data_sources_row -->
+
+            <h3>What are Pools?</h3>
+            <ul class="about_discovery_text">
+                <li>Discovery’s IDIQs are divided into functional categories that are referred to as pools</li>
+                <li>If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct pool</li>
+            </ul>
         </div><!-- end data_sources -->
     <!-- END LANDING HTML -->
 {% endblock %}
