Changing pools to service categories in the search_base template.

--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -23,9 +23,9 @@
                 </div>
 
                 <div id="pool_select">
-                    <span class="select_text">Select pool</span>
+                    <span class="select_text">Select service category</span>
                     <form id="pool-search">
-                        <select id="pool-id" class="pool_select_style" title="Select a pool"></select>
+                        <select id="pool-id" class="pool_select_style" title="Select a service category"></select>
                     </form>
                 </div>
 
