Updating the zone selector header text in the search_base template.

--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <div id="zone_select">
-                    <span class="select_text">Select zone</span>
+                    <span class="select_text">Place of performance</span>
                     <form id="zone-search">
                         <select id="zone-id" class="zone_select_style" title="Select a zone"></select>
                     </form>
