--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -44,14 +44,16 @@
                 <form id="setaside-filters" class="pure-form pure-form-stacked" title="Choose Filters (SB Only)">
                     <fieldset>
                         <div id="filter_c1">
-                            <label class="pure-checkbox" for="eight_a" title="choose_filter_8a"><input class="se_filter" type="checkbox" id="eight_a" name="8a" value="A6" aria-labeledby="choose_filters" {% if "A6" in request.GET.setasides %}checked{% endif %} />8(a)</label>
+                            <label class="pure-checkbox" for="smallbiz" title="choose_filter_smallbiz"><input class="se_filter" type="checkbox" id="smallbiz" name="smallbiz" value="SB" aria-labeledby="choose_filters" {% if "SB" in request.GET.setasides %}checked{% endif %} />Small Business</label>
+                            <label class="pure-checkbox" for="smalldis" title="choose_filter_small_and_disabled_veteran_owned"><input class="se_filter" type="checkbox" id="smalldis" name="smalldis" value="27" aria-labeledby="choose_filters" {% if "27" in request.GET.setasides %}checked{% endif %}/>Small Disadvantaged <br>Business</label>
+                            <label class="pure-checkbox" for="eight_a" title="choose_filter_8a"><input class="se_filter" type="checkbox" id="eight_a" name="8a" value="A6" aria-labeledby="choose_filters" {% if "A6" in request.GET.setasides %}checked{% endif %} />8(A)</label>
                             <label class="pure-checkbox" for="Hubz" title="choose_filter_Hubzone"><input class="se_filter" type="checkbox" id="Hubz" name="Hubz" value="XX" aria-labeledby="choose_filters" {% if "XX" in request.GET.setasides %}checked{% endif %} />HUBZone</label>
-                            <label class="pure-checkbox" for="disvet" title="choose_filter_disabled_veteran"><input class="se_filter" type="checkbox" id="disvet" name="disvet" value="QF" aria-labeledby="choose_filters" {% if "QF" in request.GET.setasides %}checked{% endif %}/>Service Disabled<br> Veteran Owned</label>
                         </div>
                         <div id="filter_c2">
                             <label class="pure-checkbox" for="woman" title="choose_filter_woman_owned"><input class="se_filter" type="checkbox" id="woman" name="woman" value="A2" aria-labeledby="choose_filters" {% if "A2" in request.GET.setasides %}checked{% endif %} />Woman Owned</label>
                             <label class="pure-checkbox" for="vet" title="choose_filter_veteran_owned"><input class="se_filter" type="checkbox" id="vet" name="vet" value="A5" aria-labeledby="choose_filters" {% if "A5" in request.GET.setasides %}checked{% endif %}/>Veteran Owned</label>
-                            <label class="pure-checkbox labeltest" for="smalldis" title="choose_filter_small_and_disabled_veteran_owned"><input class="se_filter" type="checkbox" id="smalldis" name="smalldis" value="27" aria-labeledby="choose_filters" {% if "27" in request.GET.setasides %}checked{% endif %}/>Small Disadvantaged <br>Business</label>
+                            <label class="pure-checkbox" for="disvet" title="choose_filter_disabled_veteran"><input class="se_filter" type="checkbox" id="disvet" name="disvet" value="QF" aria-labeledby="choose_filters" {% if "QF" in request.GET.setasides %}checked{% endif %}/>Service Disabled<br> Veteran Owned</label>
+                            <label class="pure-checkbox" for="vip" title="choose_filter_va_vip"><input class="se_filter" type="checkbox" id="vip" name="vip" value="VIP" aria-labeledby="choose_filters" {% if "VIP" in request.GET.setasides %}checked{% endif %}/>VA VIP</label>
                         </div>
                     </fieldset>
                 </form>
