--- a/app/discovery/templates/pool.html
+++ b/app/discovery/templates/pool.html
@@ -33,14 +33,17 @@
                     <th scope="col" class="h_vendor_name arrow-sortable sortable" title="Select to sort">
                         Vendor Name
                     </th>
-                    <th scope="col" class="h_vendor_location arrow-sortable sortable" title="Select to sort">
-                        Location
-                    </th>
                     <th scope="col" class="h_naics_results arrow-down sortable" title="Sorted descending">
                         <span title="Contract count for 5 years of work related to search">Contracts</span>
                     </th>
                     <th scope="col" class="h_vendor_pools">
                         Vehicles
+                    </th>
+                    <th scope="col" class="h_sb">
+                        SB
+                    </th>
+                    <th scope="col" class="h_sdb">
+                        SDB
                     </th>
                     <th scope="col" class="h_8a">
                         8(a)
@@ -48,17 +51,17 @@
                     <th scope="col" class="h_hubz">
                         HubZ
                     </th>
-                    <th scope="col" class="h_sdvo">
-                        SDVO
-                    </th>
                     <th scope="col" class="h_wo">
                         WO
                     </th>
                     <th scope="col" class="h_vo">
                         VO
                     </th>
-                    <th scope="col" class="h_sdb">
-                        SDB
+                    <th scope="col" class="h_sdvo">
+                        SDVO
+                    </th>
+                    <th scope="col" class="h_vip">
+                        VA VIP
                     </th>
                 </tr>
             </table>
