Adding an init class to the pool table element in the pool template.

--- a/app/discovery/templates/pool.html
+++ b/app/discovery/templates/pool.html
@@ -26,7 +26,7 @@
 
 {% block content %}
 
-    <div id="pool_table" class="pooldetail">
+    <div id="pool_table" class="pooldetail init">
         <div class="table_wrapper loading">
             <table id="pool_vendors">
                 <tr>
