Updating the pool names in the home page in the index template.

--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -78,10 +78,10 @@
                 <span id="data_source_description_fpds"  class="data_source_description">Discovery loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
             </div><!-- end data_sources_row -->
 
-            <h3>What are Pools?</h3>
+            <h3>What are Service Categories?</h3>
             <ul class="about_discovery_text">
-                <li>Discovery’s IDIQs are divided into functional categories that are referred to as pools</li>
-                <li>If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct pool</li>
+                <li>Discovery’s IDIQs are divided into functional categories that are referred to as service categories</li>
+                <li>If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct service category</li>
             </ul>
         </div><!-- end data_sources -->
     <!-- END LANDING HTML -->
