Adding multiple attribute to the pool and zone selectors in the search_base template.

--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -23,16 +23,16 @@
                 </div>
 
                 <div id="pool_select">
-                    <span class="select_text">Select service category</span>
+                    <span class="select_text">Select service categories</span>
                     <form id="pool-search">
-                        <select id="pool-id" class="pool_select_style" title="Select a service category"></select>
+                        <select id="pool-id" class="pool_select_style" title="Select a service category" multiple="multiple"></select>
                     </form>
                 </div>
 
                 <div id="zone_select">
-                    <span class="select_text">Place of performance</span>
+                    <span class="select_text">Places of performance</span>
                     <form id="zone-search">
-                        <select id="zone-id" class="zone_select_style" title="Select a zone"></select>
+                        <select id="zone-id" class="zone_select_style" title="Select a zone" multiple="multiple"></select>
                     </form>
                 </div>
             </div>
