Readding the multiple attribute to the pool id selector in the search_base template.

--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -25,7 +25,7 @@
                 <div id="pool_select">
                     <span class="select_text">Select service categories</span>
                     <form id="pool-search">
-                        <select id="pool-id" class="pool_select_style" title="Select a service category"></select>
+                        <select id="pool-id" class="pool_select_style" title="Select a service category" multiple="multiple"></select>
                     </form>
                 </div>
 
