Adding a contextual message on the vehicle column on the results page in the pool template.

--- a/app/discovery/templates/pool.html
+++ b/app/discovery/templates/pool.html
@@ -37,7 +37,7 @@
                         <span title="Contract count for 5 years of work related to search">Contracts</span>
                     </th>
                     <th scope="col" class="h_vendor_pools">
-                        Vehicles
+                        <span title="All vehicles on Discovery that vendor performs work under">Vehicles</span>
                     </th>
                     <th scope="col" class="h_sb">
                         SB
