--- a/app/discovery/static/discovery_site/css/layouts/discovery.css
+++ b/app/discovery/static/discovery_site/css/layouts/discovery.css
@@ -1523,7 +1523,7 @@ div.init {
     padding: 0;
 }
 .vendor_contract_filter_container td.contact {
-    width: 100px;
+    width: 90px;
     text-align: left;
 }
 .vendor_contract_filter_container td.phone {
@@ -1577,6 +1577,14 @@ div.init {
 
 .membership_vehicles {
     font-size: 1.2em;
+}
+
+.membership_piid {
+    margin-left: 10px;
+}
+.membership_piid .admin_label {
+    margin-top: 5px;
+    margin-right: 3px;
 }
 
 .membership_pools {
